--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
     <title>CSS Layouting</title>
 </head>
 <body>
+    <div class="header">
     <h1>Selamat Datang Di Website Kami</h1>
+    </div>
 
-    <h2>Daftar Link</h2>
-    <a href="#">Link 1</a><br>
-    <a href="#">Link 2</a><br>
-    <a href="#">Link 3</a><br>
-    <a href="#">Link 4</a><br>
+    <div class="navigasi">
+        <h2>Daftar Link</h2>
+        <a href="#">Link 1</a><br>
+        <a href="#">Link 2</a><br>
+        <a href="#">Link 3</a><br>
+        <a href="#">Link 4</a><br>
+    </div>
 
+    <div class="main">
     <h2>TEKNIK INFORMATIKA</h2>
     <img src="logo.png">
-
     <p>Pada tahun 2010 berdasar kebutuhan masyarakat dan industri terkait Program
     Diploma IV bidang informatika maka Polinema mendirikan program studi baru Diploma
     IV (DIV) Teknik Informatika (TI). Pada awal berdirinya jumlah peserta didik Program
@@ -28,7 +32,11 @@
     berdasarkan SK Direktur Nomor 53 dalam rangka peningkatan mutu pengelolaan dan
     optimasi sumber daya dibentuklah Jurusan Teknologi Informasi (JTI) dengan prodi
     D-III MI dan D-IV TI.</p>
+    </div>
 
-    <p class="copyright">Copyright 2020. Desain dan Pemrograman Web JTI Polinema</p>
+    <div class="copyright">
+    <p>Copyright 2020. Desain dan Pemrograman Web JTI Polinema</p>
+    </div>
+
 </body>
 </html>
