--- a/index.html
+++ b/index.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Latihan Margin</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Latihan FlexBox</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <div class="satu">1</div>
-    <div class="dua">2</div>
-    <div class="tiga">3</div>
+    <!-- Container utama -->
+    <div class="container-satu">
+        
+        <!-- Sidebar kiri -->
+        <div class="sidebar-satu">
+            <h3>Sidebar Satu</h3>
+            <ul>
+                <li><a href="#">Link 1</a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+                <li><a href="#">Link 4</a></li>
+                <li><a href="#">Link 5</a></li>
+            </ul>
+        </div>
 
+        <!-- Kolom utama -->
+        <div class="kolom-utama">
+            <h2>Judul Artikel</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+                dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
+                officia deserunt mollit anim id est laborum.
+            </p>
+            <p>
+                Nec ullamcorper sit amet risus nullam eget felis eget nunc lobortis mattis aliquam faucibus purus in 
+                massa tempor nec feugiat nisi pretium fusce id velit ut tortor pretium viverra suspendisse potenti. 
+                Nullam ac tortor vitae purus faucibus ornare suspendisse sed nisi lacus sed viverra tellus.
+            </p>
+            <p>
+                Cum sociis natoque penatibus et magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies.
+            </p>
+        </div>
+
+        <!-- Sidebar kanan -->
+        <div class="sidebar-dua">
+            <h3>Sidebar Dua</h3>
+            <p>
+                Duis ex mollit tempor. Ad anim reprehenderit in laborum dolor id aliqua dolore do fugiat sunt amet 
+                eu ullamco ut. Ea dolor est aliquip. Nulla sunt culpa nisi nulla sed deserunt elit aute deserunt 
+                incididunt laborum duis mollit in magna qui.
+            </p>
+        </div>
+
+    </div>
 </body>
 </html>
