--- a/JavaScript/js_embed.html
+++ b/JavaScript/js_embed.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <p>Tutorial Javascript untuk pemula</p>
+        <a href="#" onclick="alert('Yey!')">Klik aku!</a>
         <script>
             // ini adalah penulisan kode javascript
             // didalam tag <body>
