--- a/praktik_php/latihanBootstrap/navbar.html
+++ b/praktik_php/latihanBootstrap/navbar.html
@@ -12,7 +12,24 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.8/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <h1>Selamat Datang di Website Marsya</h1>
-    <p>Saya sedang belajar Bootstrap</p>
+    <div class="container">
+        <h2>Membuat Navbar</h2>
+    </div>
+    <nav class="navbar navbar-expand-sm bg-light navbar-light">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
